--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="save">ok</string>
     <string name="error_empty_content">Content can\'t be empty</string>
     <string name="cancel">cancel</string>
+    <string name="chooser_share_post">Share post</string>
 
 </resources>
