added string res

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="error_empty_content">Content can\'t be empty</string>
     <string name="cancel">cancel</string>
     <string name="chooser_share_post">Share post</string>
+    <string name="add_post">Add post</string>
 
 </resources>
