--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -13,5 +13,6 @@
     <string name="error_empty_content">Контент не может быть пустым</string>
     <string name="cancel">cancel</string>
     <string name="chooser_share_post">Поделиться</string>
+    <string name="add_post">Добавить</string>
 
 </resources>
