--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="chooser_share_post">Share post</string>
     <string name="video_button">video</string>
     <string name="add_post_fab">add post</string>
+    <string name="chooser_video_post">chooser video post</string>
 
 </resources>
