--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="cancel">cancel</string>
     <string name="chooser_share_post">Share post</string>
     <string name="text_Of_Post">text of Post</string>
+    <string name="add_post_fab">fab</string>
 
 </resources>
