--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,5 +15,6 @@
     <string name="chooser_share_post">Поделиться</string>
     <string name="text_Of_Post">текст поста</string>
     <string name="add_post_fab">fab</string>
+    <string name="video_button">video</string>
 
 </resources>
