--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="text_Of_Post">text of Post</string>
     <string name="add_post_fab">fab</string>
     <string name="video_button">video</string>
+    <string name="chooser_video_post">video content</string>
 
 </resources>
