added strings res

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -17,5 +17,8 @@
     <string name="add_post_fab">fab</string>
     <string name="video_button">video</string>
     <string name="chooser_video_post">video content</string>
+    <string name="retry_loading">Повторить</string>
+    <string name="empty_posts">Постов нет.\nЕсли создадите новый пост, то он появится здесь</string>
+    <string name="error_loading">Что-то пошло не так. Попробуйте позднее</string>
 
 </resources>
