--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,7 @@
     <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
     <string name="error_loading">Something went wrong. Try again later</string>
     <string name="error_network">Network error. Try again later</string>
+    <string name="news">NEWS</string>
+    <string name="interesting">INTERESTING</string>
 
 </resources>
