added string res

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -27,5 +27,7 @@
     <string name="description_photo">Фото</string>
     <string name="remove">Удалить</string>
     <string name="showPhotoImage">Просмотр фото и изображений</string>
+    <string name="news">НОВОСТИ</string>
+    <string name="interesting">ИНТЕРЕСНОЕ</string>
 
 </resources>
