--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -29,5 +29,6 @@
     <string name="showPhotoImage">Просмотр фото и изображений</string>
     <string name="news">НОВОСТИ</string>
     <string name="interesting">ИНТЕРЕСНОЕ</string>
+    <string name="upTad">скроллинг наверх</string>
 
 </resources>
