--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="showPhotoImage">Show photo and image</string>
     <string name="news">NEWS</string>
     <string name="interesting">INTERESTING</string>
+    <string name="upTad">up scrolling</string>
 
 </resources>
