--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -30,5 +30,9 @@
     <string name="news">НОВОСТИ</string>
     <string name="interesting">ИНТЕРЕСНОЕ</string>
     <string name="upTad">скроллинг наверх</string>
+    <string name="sign_in">Вход</string>
+    <string name="sign_up">Регистрация</string>
+    <string name="sign_out">Выход</string>
+    <string name="google_play_unavailable">Google Api Недоступно</string>
 
 </resources>
