added strings res's

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,9 +34,12 @@
     <string name="sign_up">Sign Up</string>
     <string name="sign_out">Sign Out</string>
     <string name="google_play_unavailable">Google Api Unavailable</string>
+    <string name="userName">Enter your name:</string>
     <string name="login">Enter login:</string>
     <string name="password">Enter password:</string>
     <string name="enter">Enter</string>
-    <string name="annotation">To log in, enter your username and password or register:</string>
+    <string name="annotationSignIn">To log in, enter your username and password or register:</string>
+    <string name="annotationSignUp">To log in, you need to register:</string>
+    <string name="hasSignIp">I already have a username and password...</string>
 
 </resources>
