added string res's

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,5 +41,6 @@
     <string name="annotationSignIn">To log in, enter your username and password or register:</string>
     <string name="annotationSignUp">To log in, you need to register:</string>
     <string name="hasSignIp">I already have a username and password...</string>
+    <string name="dontFilled">Not all fields are filled in.</string>
 
 </resources>
