--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -45,5 +45,8 @@
     <string name="channel_remote_name">Уведомления с сервера</string>
     <string name="channel_remote_description">Уведомления с удалённого сервера</string>
     <string name="notification_user_liked">%1$s поставил лайк посту %2$s</string>
+    <string name="exit_annotation">Выйти из аккаунта?</string>
+    <string name="yes">ДА</string>
+    <string name="not">НЕТ</string>
 
 </resources>
